<resources>
    <string name="app_name">app1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_game">Game</string>
    <string name="menu_stats">Statistics</string>
    <string name="menu_result">Result</string>
    <string name="stats">TODO</string>
    <string name="medicine">TODO</string>
    <string name="game">TODO</string>
    <string name="home">TODO</string>
    <string name="result">TODO</string>


    <string name="title">"SNAKE"</string>
    <string name="startBtn">"Play"</string>
    <string name="settingsBtn">"Settings"</string>
    <!--Settings strings-->
    <string name="settings">Settings</string>
    <string name="speed">Speed</string>
    <string name="snakeColor">Color</string>
    <!--Game strings-->
    <string name="score">0</string>
    <string name="quitPrompt">Quit game?</string>
    <string name="endScore">Score: %1$d</string>
    <string name="bestScore">%1$s\nBest: %2$d</string>
</resources>