<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.pranay.app1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_stats"
            app:destination="@id/nav_stats" />
        <action
            android:id="@+id/action_nav_home_to_nav_result"
            app:destination="@id/nav_result" />
        <action
            android:id="@+id/action_nav_home_to_nav_game"
            app:destination="@id/nav_game" />
        <action
            android:id="@+id/action_nav_home_self2"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_game"
        android:name="com.pranay.app1.ui.game.GameFragment"
        android:label="@string/menu_game"
        tools:layout="@layout/fragment_game" />
    <fragment
    android:id="@+id/nav_stats"
    android:name="com.pranay.app1.ui.stats.StatsFragment"
    android:label="@string/menu_stats"
    tools:layout="@layout/fragment_stats" />
    <fragment
        android:id="@+id/nav_result"
        android:name="com.pranay.app1.ui.result.ResultFragment"
        android:label="@string/menu_result"
        tools:layout="@layout/fragment_result" />
</navigation>