<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/lightgray"
    tools:context=".Games.Snkgame.Snake_main_activity">

    <TextView
        android:id="@+id/title"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/title"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp">
        <Button
            android:id="@+id/startBtn"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:text="@string/startBtn"
            android:background="@color/metallicGray"
            android:onClick="startGame"/>

        <Button
            android:id="@+id/settingsBtn"
            android:layout_below="@id/startBtn"
            android:layout_marginTop="40dp"
            android:layout_width="170dp"
            android:layout_height="70dp"
            android:textSize="18sp"
            android:text="@string/settingsBtn"
            android:onClick="goToSettings"/>

    </RelativeLayout>


</RelativeLayout>
