<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageButton
        android:id="@+id/homebtn"
        android:layout_width="116dp"
        android:layout_height="114dp"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/home"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gamebtn"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229"
        app:srcCompat="@drawable/ic_home_icon_silhouette"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/gamebtn"
        android:layout_width="116dp"
        android:layout_height="114dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/game"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.796"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.228"
        app:srcCompat="@drawable/ic_game"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/statsbtn"
        android:layout_width="116dp"
        android:layout_height="114dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:contentDescription="@string/stats"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homebtn"
        app:layout_constraintVertical_bias="0.093"
        app:srcCompat="@drawable/ic_graph_bar"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/medicinebtn"
        android:layout_width="116dp"
        android:layout_height="114dp"
        android:contentDescription="@string/medicine"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.796"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453"
        app:srcCompat="@drawable/ic_tablets"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/resultbtn"
        android:layout_width="116dp"
        android:layout_height="114dp"
        android:contentDescription="@string/result"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statsbtn"
        app:layout_constraintVertical_bias="0.176"
        app:srcCompat="@drawable/ic_report"
        tools:ignore="VectorDrawableCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>