<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/lightblue"
    tools:context=".Games.Snkgame.SettingsActivity">

    <TextView
        android:id="@+id/settings"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/settings" />

    <RelativeLayout
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp">

        <TextView
            android:id="@+id/SpeedText"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/speed" />

        <Spinner
            android:id="@+id/speedSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="3dp"
            android:spinnerMode="dropdown" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/speed"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp">

        <TextView
            android:id="@+id/SnakeColorText"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/snakeColor" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="3dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp">
            <RadioButton android:id="@+id/greenSnakeBtn"
                android:button="@drawable/snake_1_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:onClick="onSnakeColorButtonClicked"/>
            <RadioButton android:id="@+id/pinkSnakeBtn"
                android:button="@drawable/snake_2_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSnakeColorButtonClicked"/>
        </RadioGroup>

    </RelativeLayout>

</RelativeLayout>
